version 0.84.05
	K-1 battery fields fix
	K-70: read one push bracketing field
	Using one push bracketing field in command line
version 0.84.04 ( 2017-05-13 )
	Android: adding icon
	about/version code cleanup
	Testing suport for K-70
	K-70, K-1 selected_af_point hack
	Android: about window
	K-1 bufmask testing
	--dangerous hack
	GUI: Status hexdump
	New status field: auto_bracket_picture_counter (thx jmozmoz)
	GUI: Editable bulb exposure time
	GUI: Hide AF points if camera has more than 11
	K-S1 bugfix
	K-70 battery field reading bugfix
	Handling two new jpeg image tones: CrossProcessing, Flat, Auto
	Handling new white balance modes: MultiAuto, Manual2, Manual3, Kelvin1, Kelvin2, Kelvin3
	--read_datetime
	--read_firmware_version
	Fixing incorrectly recognized exposure submodes
	Handling new exposure submodes: Forest, NightSceneHDR, BacklightSilhouette, BlueSky
	Renaming exposure submode to scene mode
	--settings_hex
	Avoid infinite loop if green button fails
	Adding bufmask field to --status printing
	Handling higher ISO values in the GUI
	GUI: Avoid thumbnail reading, downscale preview instead
	--dump_memory

version 0.84.02 ( 2016-10-31 )
	Android code cleanup
	Possibility to read lens database from latest exiftool
	Updating lens info database ( exiftool 10.300 )
	Testing support for K-1
	Small speedup
	Increase Android 5 compatibility
	Android version requires Android 4.1 (http://stackoverflow.com/a/26422855/21348 )

version 0.84.00 ( 2016-05-09 )
	servermode subcommand: set_shutter_speed, set_iso, usleep
	servermode: avoid segmentation fault if camera is not connected
	android: bracketing (if set on the camera)
	openbsd port ( thx Hannu Vuolasaho )
	K-500 support
	Android preferences: showPreview, saveDir
	Android cheching directory
	Changing android default directory to /mnt/sdcard

version 0.83.00 ( 2016-01-29 )
	Limited K-3 II support (Testing)
	Makefile cleanup (exiftool)
	K-3 support ( thx Tao Wang )
	Eliminate GTK settings window closing warning