@@ -2,6 +2,7 @@ version 0.84.05
 	K-1 battery fields fix
 	K-70: read one push bracketing field
 	Using one push bracketing field in command line
+	Print out command line in debug mode
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
 	about/version code cleanup
